# design_patterns

./: db.json  pyproject.toml
src/: chain_of_responsibility.py  state.py  visitor.py
